<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_schedule"
        android:icon="@drawable/ic_nav_schedule"
        android:title="@string/nav_schedule" />
    <item
        android:id="@+id/nav_news"
        android:icon="@drawable/ic_nav_news"
        android:title="@string/nav_news" />
    <item
        android:id="@+id/nav_faculty"
        android:icon="@drawable/ic_nav_faculty"
        android:title="@string/nav_faculty" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings" />
</menu>
